# Snake-Game

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.h  high_score.cpp  high_score.h  main.cpp  obstacle.cpp  obstacle.h  renderer.cpp  renderer.h  speed_selector.cpp  speed_selector.h
